kustomize/canary/base/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: kubeinfo-canary
spec:
  replicas: 4
  strategy:
    canary:
      steps:
      - setWeight: 25
      - pause: {}
      - setWeight: 50
      - pause: {duration: 10}
      - setWeight: 75
      - pause: {duration: 10}
      - setWeight: 95
      - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: kubeinfo
  template:
    metadata:
      labels:
        app: kubeinfo
    spec:
      containers:
      - name: kubeinfo-container
        image: ghcr.io/heymikeey/kube-info/kube-info:v2.0.0
        ports:
          - containerPort: 5000
